[project]
name = "photograph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dearpygui>=2.1.0",
    "fastapi>=0.116.1",
    "glfw>=2.9.0",
    "moderngl>=5.12.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "pyopengl>=3.1.10",
    "python-socketio[asyncio-server,client]>=5.13.0",
    "uvicorn>=0.35.0",
]
